--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Sie werden weitergeleitet...</h1>
-    <p>Falls die Weiterleitung nicht automatisch funktioniert, klicken Sie bitte <a href="https://zielseite.de">hier</a>.</p>
+    <p>Falls die Weiterleitung nicht automatisch funktioniert, klicken Sie bitte <a href="https://google.de">hier</a>.</p>
 </body>
 </html>
