--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=https://de.crazygames.com/spiele/smurfs-bubble-shooter-story">
+    <meta http-equiv="refresh" content="0;url=https://es.littlekidgames.com/math/5964.html">
     <title>Weiterleitung</title>
 </head>
 <body>
